# fiat

./: .gitignore  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  configuration.rst  examples.rst  index.rst  models_mesh_funcs.rst
examples/: wolf-creek-calibration.ipynb
examples/wolf-creek-research-basin/: MESH_drainage_database.nc  MESH_forcing_subset.nc  MESH_input_run_options.ini  MESH_parameters_CLASS.ini  MESH_parameters_hydrology.ini  README.txt  outputs_balance.txt
examples/wolf-creek-research-basin/geometries/: wolf-creek-research-basin-catchments.dbf  wolf-creek-research-basin-catchments.shp  wolf-creek-research-basin-catchments.shx  wolf-creek-research-basin-rivers.dbf  wolf-creek-research-basin-rivers.shp  wolf-creek-research-basin-rivers.shx
src/fiatmodel/: __about__.py  __init__.py  core.py  main.py  utils.py
src/fiatmodel/calibration/: __init__.py  optimizer.py
src/fiatmodel/calibration/ostrich/: default_dicts.py  templating.py
src/fiatmodel/calibration/ostrich/templates/: archive.jinja2  eval.jinja2  mesh.jinja2  ostIn.txt.jinja2
src/fiatmodel/calibrator/ostrich/scripts/: archive.sh.jinja2
src/fiatmodel/calibrator/ostrich/templates/: ostIn.txt.jinja2
src/fiatmodel/models/: builder.py
src/fiatmodel/models/mesh/: __init__.py  eval.py  funcs.py  model.py
src/fiatmodel/models/mesh/template/scripts/: eval.py
src/fiatmodel/models/mesh/template/templates/: MESH_parameters_hydrology.tpl
src/fiatmodel/models/mesh/templating/: ostIn.txt.jinja2  templating.py
src/fiatmodel/notebooks/: TPL_generation.ipynb
src/fiatmodel/template/observations/: obs.csv
src/fiatmodel/template/scripts/: archive.sh  calibration_job_niagara.slurm  model_evaluation.ipynb  model_evaluation.py
src/fiatmodel/template/templates/: MESH_parameters_CLASS.tpl
tests/: Package_testing.ipynb  default_dicts.py  defaults.json  eval_tests.ipynb  general_entries.ipynb  general_entries_funcs.ipynb  general_entries_funcs_templating.ipynb  obs_tests.ipynb  ostrich_templating-constraints.ipynb  ostrich_templating-hydrology_params.ipynb  ostrich_templating.ipynb  testing_scores.ipynb
tests/.virtual_documents/: general_entries.ipynb
tests/junk_files/: class.json  class_changed.json
