[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiatmodel"
version = "0.1.0"
description = "Framework for Iterative and Agnostic Testing of Hydrological Models"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kasra Keshavarz", email = "kasra.keshavarz1@ucalgary.ca"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "python-dateutil>=2.9.0",
    "packaging>=25.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.0",
    "ipython>=8.37.0",
    "jupyter-client>=8.6.0",
    "jupyter-core>=5.8.0",
    "matplotlib-inline>=0.1.7",
    "pygments>=2.19.0",
    "prompt-toolkit>=3.0.50",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/kasra-keshavarz/FIATModel"
Repository = "https://github.com/kasra-keshavarz/FIATModel"
Issues = "https://github.com/kasra-keshavarz/FIATModel/issues"

[project.scripts]
fiatmodel = "fiatmodel.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
